--- a/resources/sass/bootstrap.scss
+++ b/resources/sass/bootstrap.scss
@@ -1,2 +1,4 @@
 @import "./components/pagination";
 @import "./components/navbar";
+@import "./components/article";
+@import "./components/cart-product";
